--- a/test/app/app.html
+++ b/test/app/app.html
@@ -10,7 +10,7 @@
 
     <div>
         <span>Meno:</span>
-        <input id="input" type="text" autofocus placeholder="Sem napíšte meno" onkeyup="confirmForm(event)">
+        <input id="input" type="text" autofocus placeholder="Zadajte meno a stlačte Enter" onkeyup="confirmForm(event)">
     </div>
 
     <!-- <input type="text" name="xss" value="${param.xss}"> -->
